--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Criação de Sites Wordpress, HTML, CSS e JS.">
+    <meta name="keywords" content="Criação de Sites Wordpress, Freelancer Websites, Portfólio Desenvolvedor Web, Portfólio Desenvolvedor Front-End">
+    <meta name="author" content="Fernando Chaves">
     <title>FC | Desenvolvimento Web</title>
-    <link rel="shortcut icon" href="assets/favicon.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/honey-badger.png" type="image/x-icon">
 
     <!-- Estilização -->
     <link rel="stylesheet" href="/assets/css/style.css">
     <link rel="stylesheet" href="/assets/css/responsive.css"> 
 
-    <!-- Fontes -->
-    
 
     <!-- Bibliotecas CSS -->
     <script src="https://kit.fontawesome.com/6465650075.js" crossorigin="anonymous"></script>
@@ -213,8 +214,8 @@
     </section>
 
     <!-- Javascript -->
-    <script src="/assets/particles.js"></script>
-    <script src="/assets/app.js"></script>
-    <script src="/assets/main.js"></script>
+    <script src="/assets/javascript/particles.js"></script>
+    <script src="/assets/javascript/app.js"></script>
+    <script src="/assets/javascript/main.js"></script>
 </body>
 </html>
