--- a/index.html
+++ b/index.html
@@ -63,18 +63,18 @@
                         <i class="fas fa-desktop card__icon"></i>  
                         <i class="fas fa-mobile card__icon card__icon--mobile"></i>  
                     </div>
-                    <h3 class="card__title">Sites responsivos</h3>   
-                    <p class="card__paragraph">Se você tem um negócio é essencial que seu site esteja presente em todos dispositivos, pode contar comigo para tornar isso possível.</p>             
+                    <h3 class="card__title">Sites compátiveis</h3>   
+                    <p class="card__paragraph">Nos dias atuais, é essencial que seu website esteja em todas plataformas, desde mobile a desktop. Através de propriedades específicas tornarei seu site compativel com todas plataformas e navegadores disponíveis do mercado.</p>             
                 </div>
-                <div class="card" data-anime="bottom">
+                <div class="card card--middle" data-anime="bottom">
                     <i class="fas fa-rocket card__icon"></i> 
                     <h3 class="card__title">Site 10x mais rápido!</h3>  
-                    <p class="card__paragraph">Um site lento espanta clientes. Através de ferramentas de optimização de carregamento, imagens e diversas outras propriedades farei seu site carregar na velocidade da luz!.</p>    
+                    <p class="card__paragraph">Seu cliente não tem tempo a perder com um site lento, ele certamente irá escolher a conconrrência. Com ferramentas de otimização de códigos, imagens e um bom serviço de host, deixarei seu site muito mais rápido.</p>    
                 </div>
                 <div class="card" data-anime="bottom">
                     <i class="fas fa-code card__icon"></i>
                     <h3 class="card__title">Manutenção de Website</h3>  
-                    <p class="card__paragraph">Precisa mexer no seu site mas não sabe como? Conte comigo para fazer toda manutenção que seu site precisa e deixar ele novo.</p>                     
+                    <p class="card__paragraph">Sites precisam ser constantemente atualizados ou estarão fora do mercado. Ofereço serviços de troca de host, troca de dominíos e manutenção de diversas tecnologias como Html, Css, Wordpress e Javascript.</p>                     
                 </div>
             </div>
         </div>
@@ -90,7 +90,7 @@
                         <img src="/assets/images/express-shop.webp" alt=""
                         class="site__img">
                         <div class="site__imgMiddle">
-                            <a href="" class="site__imgText">Visitar Site</a>
+                            <a href="https://expresshop.netlify.app/" class="site__imgText">Visitar Site</a>
                         </div>
                     </div>
                     <div class="site__description">
@@ -105,7 +105,7 @@
                     <div class="site__imgContainer">
                         <img src="/assets/images/soul.webp" alt="" class="site__img">
                         <div class="site__imgMiddle">
-                            <a href="" class="site__imgText">Visitar Site</a>
+                            <a href="https://soulwebsite.netlify.app/" class="site__imgText">Visitar Site</a>
                         </div>
                     </div>
                     <div class="site__description">
@@ -120,7 +120,7 @@
                     <div class="site__imgContainer">
                         <img src="/assets/images/next-bar.webp" alt="" class="site__img">
                         <div class="site__imgMiddle">
-                            <a href="" class="site__imgText">Visitar Site</a>
+                            <a href="https://nextbar.netlify.app/" class="site__imgText">Visitar Site</a>
                         </div>
                     </div>
                     <div class="site__description">
@@ -136,7 +136,7 @@
                     <div class="site__imgContainer">
                         <img src="/assets/images/cafeteria-blog.webp" alt="" class="site__img">
                         <div class="site__imgMiddle">
-                            <a href="" class="site__imgText">Visitar Site</a>
+                            <a href="https://cafeteriablog.netlify.app/" class="site__imgText">Visitar Site</a>
                         </div>
                     </div>
                     <div class="site__description">
@@ -151,7 +151,7 @@
                     <div class="site__imgContainer">
                         <img src="/assets/images/responsive-css-website.webp" alt="" class="site__img">
                         <div class="site__imgMiddle">
-                            <a href="" class="site__imgText">Visitar Site</a>
+                            <a href="https://theastronaut.netlify.app/" class="site__imgText">Visitar Site</a>
                         </div>
                     </div>
                     <div class="site__description">
@@ -169,7 +169,7 @@
                     <div class="site__imgContainer">
                         <img src="/assets/images/tasklistjs.webp" alt="" class="site__img">
                         <div class="site__imgMiddle">
-                            <a href="" class="site__imgText">Visitar Site</a>
+                            <a href="https://jstasklist.netlify.app/" class="site__imgText">Visitar Site</a>
                         </div>
                     </div>
                     <div class="site__description">
@@ -185,7 +185,7 @@
                     <div class="site__imgContainer">
                         <img src="/assets/images/cardcarouseljs.webp" alt="" class="site__img">
                         <div class="site__imgMiddle">
-                            <a href="" class="site__imgText">Visitar Site</a>
+                            <a href="https://cardcarouseljs.netlify.app/" class="site__imgText">Visitar Site</a>
                         </div>
                     </div>
                     <div class="site__description">
