--- a/index.html
+++ b/index.html
@@ -64,17 +64,17 @@
                         <i class="fas fa-mobile card__icon card__icon--mobile"></i>  
                     </div>
                     <h3 class="card__title">Sites compátiveis</h3>   
-                    <p class="card__paragraph">Nos dias atuais, é essencial que seu website esteja em todas plataformas, desde mobile a desktop. Através de propriedades específicas tornarei seu site compativel com todas plataformas e navegadores disponíveis do mercado.</p>             
+                    <p class="card__paragraph">Atualmente, é essencial que seu website esteja em todas plataformas. Através de propriedades específicas tornarei seu site compativel com todas plataformas e navegadores disponíveis do mercado.</p>             
                 </div>
                 <div class="card card--middle" data-anime="bottom">
                     <i class="fas fa-rocket card__icon"></i> 
                     <h3 class="card__title">Site 10x mais rápido!</h3>  
-                    <p class="card__paragraph">Seu cliente não tem tempo a perder com um site lento, ele certamente irá escolher a conconrrência. Com ferramentas de otimização de códigos, imagens e um bom serviço de host, deixarei seu site muito mais rápido.</p>    
+                    <p class="card__paragraph">Seu cliente não tem tempo a perder com um site lento. Com ferramentas de otimização de códigos, imagens e um bom serviço de host, deixarei seu site muito mais rápido.</p>    
                 </div>
                 <div class="card" data-anime="bottom">
                     <i class="fas fa-code card__icon"></i>
                     <h3 class="card__title">Manutenção de Website</h3>  
-                    <p class="card__paragraph">Sites precisam ser constantemente atualizados ou estarão fora do mercado. Ofereço serviços de troca de host, troca de dominíos e manutenção de diversas tecnologias como Html, Css, Wordpress e Javascript.</p>                     
+                    <p class="card__paragraph">Sites precisam ser constantemente atualizados. Ofereço serviços de troca de host, troca de dominíos e manutenção de diversas tecnologias como Html, Css, Wordpress e Javascript.</p>                     
                 </div>
             </div>
         </div>
@@ -212,6 +212,10 @@
             </div>           
         </div>
     </section>
+    <!-- Copy -->
+    <section id="copy">
+        <p class="copy__paragraph">&copy;2020 | Todos direitos reservados.</p>
+    </section> 
 
     <!-- Javascript -->
     <script src="/assets/javascript/particles.js"></script>
