Atualizaçao icone e icons

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="description" content="Criação de Sites Wordpress, HTML, CSS e JS.">
     <meta name="keywords" content="Criação de Sites Wordpress, Freelancer Websites, Portfólio Desenvolvedor Web, Portfólio Desenvolvedor Front-End">
     <meta name="author" content="Fernando Chaves">
-    <title>FC | Desenvolvimento Web</title>
-    <link rel="shortcut icon" href="assets/images/honey-badger.png" type="image/x-icon">
+    <title>Fernando Chaves - Desenvolvedor Web</title>
+    <link rel="shortcut icon" href="assets/images/avatar.png" type="image/x-icon">
 
     <!-- Estilização -->
     <link rel="stylesheet" href="/assets/css/style.css"> 
