Fav icon alterado

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Criação de Sites Wordpress, Freelancer Websites, Portfólio Desenvolvedor Web, Portfólio Desenvolvedor Front-End">
     <meta name="author" content="Fernando Chaves">
     <title>Fernando Chaves - Desenvolvedor Web</title>
-    <link rel="shortcut icon" href="assets/images/avatar.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/honey-badger.png" type="image/x-icon">
 
     <!-- Estilização -->
     <link rel="stylesheet" href="/assets/css/style.css"> 
