--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <i class="fas fa-desktop card__icon"></i>  
                         <i class="fas fa-mobile card__icon card__icon--mobile"></i>  
                     </div>
-                    <h3 class="card__title">Sites compátiveis</h3>   
+                    <h3 class="card__title">Sites compatíveis</h3>   
                     <p class="card__paragraph">Atualmente, é essencial que seu website esteja em todas plataformas. Através de propriedades específicas tornarei seu site compativel com todas plataformas e navegadores disponíveis do mercado.</p>             
                 </div>
                 <div class="card card--middle" data-anime="bottom">
