--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Criação de Sites Wordpress, Freelancer Websites, Portfólio Desenvolvedor Web, Portfólio Desenvolvedor Front-End">
     <meta name="author" content="Fernando Chaves">
     <title>Fernando Chaves - Desenvolvedor Web</title>
-    <link rel="shortcut icon" href="assets/images/honey-badger.png" type="image/x-icon">
+    <link rel="shortcut icon" href="assets/images/logo-2.png" type="image/x-icon">
 
     <!-- Estilização -->
     <link rel="stylesheet" href="/assets/css/style.css"> 
@@ -24,23 +24,18 @@
     </div>
     <!-- Home -->  
     <section id="home">
-        <div id = "particles-js"></div>
         <div class="home__container spacing-wrapper" class="particles-js">
-            <h1 class="home__title" data-anime="bottom">Olá, me chamo Fernando.</h1>
-            <p class="home__description" data-anime="bottom">Desenvolvedor web freelancer & Ui/Ux.</p>
-            <p class="home__description home__description--2 mt20" data-anime="bottom">Trabalho com diversas tecnologias e programas mais recentes e sofisticados do mercado. 
-            Continue rolando para baixo para ver um pouco mais do meu trabalho.</p>
-            <div class="home__icons" data-anime="bottom">
-                <i class="fab fa-html5 home__icon"></i>
-                <i class="fab fa-css3-alt home__icon"></i>
-                <i class="fab fa-js home__icon"></i>
-                <i class="fab fa-php home__icon"></i>
-                <i class="fab fa-wordpress home__icon"></i>
-                <i class="fab fa-bootstrap home__icon"></i>
-                <i class="fab fa-sass home__icon"></i>
+            <div class="home__text">
+                <h1 class="home__title" data-anime="bottom">Olá, me chamo Fernando.</h1>
+                <p class="home__description" data-anime="bottom">Desenvolvedor web freelancer & Ui/Ux.</p>
+                
             </div>
+            <div class="home__imgContainer">
+                <img src="assets/images/home-img.svg" alt="" class="home__img">
             </div>
-        </section>
+        </div>
+    </section>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#6668F0" fill-opacity="1" d="M0,32L48,32C96,32,192,32,288,58.7C384,85,480,139,576,176C672,213,768,235,864,213.3C960,192,1056,128,1152,96C1248,64,1344,64,1392,64L1440,64L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
     <!-- Whatsapp Icon -->
     <a href="https://api.whatsapp.com/send?phone=5551998857983&text=Ol%C3%A1%20Fernando!%20Gostei%20muito%20do%20seu%20trabalho%20e%20tenho%20interesse%20em%20contrat%C3%A1-lo." class="whats__container"><i class="fab fa-whatsapp whats__icon"></i></a>   
     <!-- About -->
