Mudando para sass

--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
 
     <!-- Estilização -->
     <link rel="stylesheet" href="/assets/css/style.css"> 
-    <link rel="stylesheet" href="/assets/css/responsive.css">
-
 
     <!-- Bibliotecas CSS -->
     <script src="https://kit.fontawesome.com/6465650075.js" crossorigin="anonymous"></script>
@@ -23,12 +21,11 @@
         <div class="bars__burger"></div>
     </div>
     <!-- Home -->  
-    <section id="home">
+    <section class="home" id="home">
         <div class="home__container spacing-wrapper" class="particles-js">
             <div class="home__text">
                 <h1 class="home__title" data-anime="bottom">Olá, me chamo Fernando.</h1>
                 <p class="home__description" data-anime="bottom">Desenvolvedor web freelancer & Ui/Ux.</p>
-                
             </div>
             <div class="home__imgContainer">
                 <img src="assets/images/home-img.svg" alt="" class="home__img">
