--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- About -->
     <section id="about">
         <div class="container spacing-wrapper">
-            <h2 class="about__title" data-anime="left">Sobre mim</h2>
+            <h2 class="about__title" data-anime="left">Quem é Fernando Chaves?</h2>
             <img src="/assets/images/eu.webp" alt="" class="about__img" data-anime="left">
             <p class="about__paragraph" data-anime="bottom">Estava no último ano do ensino médio quando percebi meu amor por programação e códigos. Após concluir o ensino básico, ingressei na faculdade de Ensino superior Estácio, onde curso atualmente Análise e Desenvolvimento de Sistemas(2° Periodo).</p>
             <p class="about__paragraph" data-anime="bottom">Atravessando lógica de programação e diversos cursos, amei o Front-End e decidi que daria meu melhor para sempre fazer um ótimo trabalho.</p>
