Estilizaçao sass adicionada

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- Whatsapp Icon -->
     <a href="https://api.whatsapp.com/send?phone=5551998857983&text=Ol%C3%A1%20Fernando!%20Gostei%20muito%20do%20seu%20trabalho%20e%20tenho%20interesse%20em%20contrat%C3%A1-lo." class="whats__container"><i class="fab fa-whatsapp whats__icon"></i></a>   
     <!-- About -->
-    <section id="about">
+    <section class="about" id="about">
         <div class="container spacing-wrapper">
             <h2 class="about__title" data-anime="left">Quem é Fernando Chaves?</h2>
             <img src="/assets/images/eu.webp" alt="" class="about__img" data-anime="left">
@@ -72,17 +72,17 @@
         </div>
     </section>
     <!-- Portfolio -->
-    <section id="portfolio">
+    <section class="portfolio" id="portfolio">
         <div class="container spacing-wrapper">
             <h2 data-anime="left">Portfólio</h2>
             <h3 class="portfolio__subtitle" data-anime="left">Sites Profissionais</h3>
             <div class="portfolio__images">
-                <div class="site__container" data-anime="bottom">
-                    <div class="site__imgContainer">
+                <div class="site" data-anime="bottom">
+                    <div class="site__container">
                         <img src="/assets/images/express-shop.webp" alt=""
                         class="site__img">
-                        <div class="site__imgMiddle">
-                            <a href="https://expresshop.netlify.app/" class="site__imgText">Visitar Site</a>
+                        <div class="site__middle">
+                            <a href="https://expresshop.netlify.app/" class="site__text">Visitar Site</a>
                         </div>
                     </div>
                     <div class="site__description">
@@ -93,11 +93,11 @@
                         <p class="site__title">Express Shop</p>
                     </div>
                 </div>  
-                <div class="site__container" data-anime="bottom">
-                    <div class="site__imgContainer">
+                <div class="site" data-anime="bottom">
+                    <div class="site__container">
                         <img src="/assets/images/soul.webp" alt="" class="site__img">
-                        <div class="site__imgMiddle">
-                            <a href="https://soulwebsite.netlify.app/" class="site__imgText">Visitar Site</a>
+                        <div class="site__middle">
+                            <a href="https://soulwebsite.netlify.app/" class="site__text">Visitar Site</a>
                         </div>
                     </div>
                     <div class="site__description">
@@ -108,11 +108,11 @@
                         <p class="site__title">Soul</p>
                     </div>
                 </div> 
-                <div class="site__container" data-anime="bottom">
-                    <div class="site__imgContainer">
+                <div class="site" data-anime="bottom">
+                    <div class="site__container">
                         <img src="/assets/images/next-bar.webp" alt="" class="site__img">
-                        <div class="site__imgMiddle">
-                            <a href="https://nextbar.netlify.app/" class="site__imgText">Visitar Site</a>
+                        <div class="site__middle">
+                            <a href="https://nextbar.netlify.app/" class="site__text">Visitar Site</a>
                         </div>
                     </div>
                     <div class="site__description">
@@ -124,11 +124,11 @@
                         <p class="site__title">Next Bar</p>
                     </div>
                 </div>
-                <div class="site__container"  data-anime="bottom">
-                    <div class="site__imgContainer">
+                <div class="site"  data-anime="bottom">
+                    <div class="site__container">
                         <img src="/assets/images/cafeteria-blog.webp" alt="" class="site__img">
-                        <div class="site__imgMiddle">
-                            <a href="https://cafeteriablog.netlify.app/" class="site__imgText">Visitar Site</a>
+                        <div class="site__middle">
+                            <a href="https://cafeteriablog.netlify.app/" class="site__text">Visitar Site</a>
                         </div>
                     </div>
                     <div class="site__description">
@@ -139,11 +139,11 @@
                         <p class="site__title">Cafeteria Blog</p>
                     </div>
                 </div>
-                <div class="site__container"  data-anime="bottom">
-                    <div class="site__imgContainer">
+                <div class="site"  data-anime="bottom">
+                    <div class="site__container">
                         <img src="/assets/images/responsive-css-website.webp" alt="" class="site__img">
-                        <div class="site__imgMiddle">
-                            <a href="https://theastronaut.netlify.app/" class="site__imgText">Visitar Site</a>
+                        <div class="site__middle">
+                            <a href="https://theastronaut.netlify.app/" class="site__text">Visitar Site</a>
                         </div>
                     </div>
                     <div class="site__description">
@@ -157,11 +157,11 @@
             </div>
             <h3 class="portfolio__subtitle" data-anime="left">Projetos Independentes</h3>
             <div class="portfolio__images">
-                <div class="site__container"  data-anime="bottom">
-                    <div class="site__imgContainer">
+                <div class="site"  data-anime="bottom">
+                    <div class="site__container">
                         <img src="/assets/images/tasklistjs.webp" alt="" class="site__img">
-                        <div class="site__imgMiddle">
-                            <a href="https://jstasklist.netlify.app/" class="site__imgText">Visitar Site</a>
+                        <div class="site__middle">
+                            <a href="https://jstasklist.netlify.app/" class="site__text">Visitar Site</a>
                         </div>
                     </div>
                     <div class="site__description">
@@ -173,11 +173,11 @@
                         <p class="site__title">Lista de Tarefas</p>
                     </div>
                     </div>
-                <div class="site__container"  data-anime="bottom">
-                    <div class="site__imgContainer">
+                <div class="site"  data-anime="bottom">
+                    <div class="site__container">
                         <img src="/assets/images/cardcarouseljs.webp" alt="" class="site__img">
-                        <div class="site__imgMiddle">
-                            <a href="https://cardcarouseljs.netlify.app/" class="site__imgText">Visitar Site</a>
+                        <div class="site__middle">
+                            <a href="https://cardcarouseljs.netlify.app/" class="site__text">Visitar Site</a>
                         </div>
                     </div>
                     <div class="site__description">
@@ -193,7 +193,7 @@
         </div>  
     </section>  
     <!-- Contact --> 
-    <section id="contact">
+    <section class="contact" id="contact">
         <div class="contact__container spacing-wrapper">
             <h2 data-anime="left">Contato</h2>  
             <div class="contact__subtitleContainer" data-anime="bottom"> 
