Texto home alterado

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="home__container spacing-wrapper" class="particles-js">
             <div class="home__text">
                 <h1 class="home__title" data-anime="bottom">Olá, me chamo Fernando.</h1>
-                <p class="home__description" data-anime="bottom">Desenvolvedor web freelancer & Ui/Ux.</p>
+                <p class="home__description" data-anime="bottom">Eu crio e faço a manutenção de websites casuais e profissionais.</p>
             </div>
             <div class="home__imgContainer">
                 <img src="assets/images/home-img.svg" alt="" class="home__img">
