--- a/index.html
+++ b/index.html
@@ -26,13 +26,17 @@
             <div class="home__text">
                 <h1 class="home__title" data-anime="bottom">Olá, me chamo Fernando.</h1>
                 <p class="home__description" data-anime="bottom">Eu crio e faço a manutenção de websites casuais e profissionais.</p>
+                <a href="" class="home__btn">Saber Mais</a>
+                <a href="" class="home__btn home__btn--2">Contato</a>
             </div>
             <div class="home__imgContainer">
                 <img src="assets/images/home-img.svg" alt="" class="home__img">
             </div>
         </div>
     </section>
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#6668F0" fill-opacity="1" d="M0,32L48,32C96,32,192,32,288,58.7C384,85,480,139,576,176C672,213,768,235,864,213.3C960,192,1056,128,1152,96C1248,64,1344,64,1392,64L1440,64L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path></svg>
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path fill="#6668F0" fill-opacity="100%" d="M0,64L48,80C96,96,192,128,288,133.3C384,139,480,117,576,122.7C672,128,768,160,864,144C960,128,1056,64,1152,58.7C1248,53,1344,107,1392,133.3L1440,160L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z"></path>
+      </svg>
     <!-- Whatsapp Icon -->
     <a href="https://api.whatsapp.com/send?phone=5551998857983&text=Ol%C3%A1%20Fernando!%20Gostei%20muito%20do%20seu%20trabalho%20e%20tenho%20interesse%20em%20contrat%C3%A1-lo." class="whats__container"><i class="fab fa-whatsapp whats__icon"></i></a>   
     <!-- About -->
